@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,22 +16,25 @@
 
 package org.springframework.http.server.reactive;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Collections;
+import java.util.Map;
+import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
 import org.springframework.http.HttpCookie;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.server.RequestPath;
 import org.springframework.lang.Nullable;
+import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
+import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
 /**
@@ -42,16 +45,20 @@ import org.springframework.util.StringUtils;
  */
 public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 
-	private static final Log logger = LogFactory.getLog(ServerHttpRequest.class);
-
 	private static final Pattern QUERY_PATTERN = Pattern.compile("([^&=]+)(=?)([^&]+)?");
 
 
 	private final URI uri;
 
-	private final RequestPath path;
+	@Nullable
+	private final String contextPath;
+
+	@Nullable
+	private RequestPath path;
 
 	private final HttpHeaders headers;
+
+	private final HttpMethod method;
 
 	@Nullable
 	private MultiValueMap<String, String> queryParams;
@@ -62,19 +69,63 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 	@Nullable
 	private SslInfo sslInfo;
 
+	@Nullable
+	private String id;
+
+	@Nullable
+	private String logPrefix;
+
+	@Nullable
+	private Supplier<Map<String, Object>> attributesSupplier;
+
 
 	/**
-	 * Constructor with the URI and headers for the request.
+	 * Constructor with the method, URI and headers for the request.
+	 * @param method the HTTP method for the request
 	 * @param uri the URI for the request
 	 * @param contextPath the context path for the request
-	 * @param headers the headers for the request
+	 * @param headers the headers for the request (as {@link MultiValueMap})
+	 * @since 6.0.8
 	 */
-	public AbstractServerHttpRequest(URI uri, @Nullable String contextPath, HttpHeaders headers) {
+	public AbstractServerHttpRequest(HttpMethod method, URI uri, @Nullable String contextPath,
+			MultiValueMap<String, String> headers) {
+
+		Assert.notNull(method, "Method must not be null");
+		Assert.notNull(uri, "Uri must not be null");
+		Assert.notNull(headers, "Headers must not be null");
+
+		this.method = method;
 		this.uri = uri;
-		this.path = RequestPath.parse(uri, contextPath);
+		this.contextPath = contextPath;
 		this.headers = HttpHeaders.readOnlyHttpHeaders(headers);
 	}
 
+
+	@Override
+	public String getId() {
+		if (this.id == null) {
+			this.id = initId();
+			if (this.id == null) {
+				this.id = ObjectUtils.getIdentityHexString(this);
+			}
+		}
+		return this.id;
+	}
+
+	/**
+	 * Obtain the request id to use, or {@code null} in which case the Object
+	 * identity of this request instance is used.
+	 * @since 5.1
+	 */
+	@Nullable
+	protected String initId() {
+		return null;
+	}
+
+	@Override
+	public HttpMethod getMethod() {
+		return this.method;
+	}
 
 	@Override
 	public URI getURI() {
@@ -82,7 +133,20 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 	}
 
 	@Override
+	public Map<String, Object> getAttributes() {
+		if (this.attributesSupplier != null) {
+			return this.attributesSupplier.get();
+		}
+		else {
+			return Collections.emptyMap();
+		}
+	}
+
+	@Override
 	public RequestPath getPath() {
+		if (this.path == null) {
+			this.path = RequestPath.parse(this.uri, this.contextPath);
+		}
 		return this.path;
 	}
 
@@ -122,18 +186,8 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 		return queryParams;
 	}
 
-	@SuppressWarnings("deprecation")
 	private String decodeQueryParam(String value) {
-		try {
-			return URLDecoder.decode(value, "UTF-8");
-		}
-		catch (UnsupportedEncodingException ex) {
-			if (logger.isWarnEnabled()) {
-				logger.warn("Could not decode query param [" + value + "] as 'UTF-8'. " +
-						"Falling back on default encoding; exception message: " + ex.getMessage());
-			}
-			return URLDecoder.decode(value);
-		}
+		return URLDecoder.decode(value, StandardCharsets.UTF_8);
 	}
 
 	@Override
@@ -149,7 +203,7 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 	 * an {@link HttpCookie} map. The return value is turned into an immutable
 	 * map and cached.
 	 * <p>Note that this method is invoked lazily on access to
-	 * {@link #getCookies()}. Sub-classes should synchronize cookie
+	 * {@link #getCookies()}. Subclasses should synchronize cookie
 	 * initialization if the underlying "native" request does not provide
 	 * thread-safe access to cookie data.
 	 */
@@ -179,4 +233,32 @@ public abstract class AbstractServerHttpRequest implements ServerHttpRequest {
 	 */
 	public abstract <T> T getNativeRequest();
 
+	/**
+	 * For internal use in logging at the HTTP adapter layer.
+	 * @since 5.1
+	 */
+	String getLogPrefix() {
+		if (this.logPrefix == null) {
+			this.logPrefix = "[" + initLogPrefix() + "] ";
+		}
+		return this.logPrefix;
+	}
+
+	/**
+	 * Subclasses can override this to provide the prefix to use for log messages.
+	 * <p>By default, this is {@link #getId()}.
+	 * @since 5.3.15
+	 */
+	protected String initLogPrefix() {
+		return getId();
+	}
+
+	/**
+	 * Set the attribute supplier.
+	 * <p><strong>Note:</strong> This is exposed mainly for internal framework
+	 * use.
+	 */
+	public void setAttributesSupplier(Supplier<Map<String, Object>> attributesSupplier) {
+		this.attributesSupplier = attributesSupplier;
+	}
 }
