@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,7 +17,6 @@
 package org.springframework.web.reactive.result.condition;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -25,14 +24,17 @@ import java.util.Set;
 
 import org.springframework.http.MediaType;
 import org.springframework.lang.Nullable;
+import org.springframework.util.CollectionUtils;
+import org.springframework.util.MimeType;
+import org.springframework.util.ObjectUtils;
 import org.springframework.web.accept.ContentNegotiationManager;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.cors.reactive.CorsUtils;
-import org.springframework.web.reactive.accept.HeaderContentTypeResolver;
 import org.springframework.web.reactive.accept.RequestedContentTypeResolver;
 import org.springframework.web.reactive.accept.RequestedContentTypeResolverBuilder;
 import org.springframework.web.server.NotAcceptableStatusException;
 import org.springframework.web.server.ServerWebExchange;
+import org.springframework.web.server.UnsupportedMediaTypeStatusException;
 
 /**
  * A logical disjunction (' || ') request condition to match a request's 'Accept' header
@@ -46,11 +48,16 @@ import org.springframework.web.server.ServerWebExchange;
  */
 public final class ProducesRequestCondition extends AbstractRequestCondition<ProducesRequestCondition> {
 
-	private static final ProducesRequestCondition PRE_FLIGHT_MATCH = new ProducesRequestCondition();
+	private static final RequestedContentTypeResolver DEFAULT_CONTENT_TYPE_RESOLVER =
+			new RequestedContentTypeResolverBuilder().build();
+
+	private static final ProducesRequestCondition EMPTY_CONDITION = new ProducesRequestCondition();
+
+	private static final String MEDIA_TYPES_ATTRIBUTE = ProducesRequestCondition.class.getName() + ".MEDIA_TYPES";
 
 
 	private final List<ProduceMediaTypeExpression> mediaTypeAllList =
-			Collections.singletonList(new ProduceMediaTypeExpression("*/*"));
+			List.of(new ProduceMediaTypeExpression(MediaType.ALL_VALUE));
 
 	private final List<ProduceMediaTypeExpression> expressions;
 
@@ -74,7 +81,7 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 * @param produces expressions with syntax defined by {@link RequestMapping#produces()}
 	 * @param headers expressions with syntax defined by {@link RequestMapping#headers()}
 	 */
-	public ProducesRequestCondition(String[] produces, String[] headers) {
+	public ProducesRequestCondition(@Nullable String[] produces, @Nullable String[] headers) {
 		this(produces, headers, null);
 	}
 
@@ -85,43 +92,47 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 * @param headers expressions with syntax defined by {@link RequestMapping#headers()}
 	 * @param resolver used to determine requested content type
 	 */
-	public ProducesRequestCondition(String[] produces, String[] headers, RequestedContentTypeResolver resolver) {
-		this.expressions = new ArrayList<>(parseExpressions(produces, headers));
-		Collections.sort(this.expressions);
-		this.contentTypeResolver = (resolver != null ? resolver : new HeaderContentTypeResolver());
+	public ProducesRequestCondition(
+			@Nullable String[] produces, @Nullable String[] headers, @Nullable RequestedContentTypeResolver resolver) {
+
+		this.expressions = parseExpressions(produces, headers);
+		if (this.expressions.size() > 1) {
+			Collections.sort(this.expressions);
+		}
+		this.contentTypeResolver = (resolver != null ? resolver : DEFAULT_CONTENT_TYPE_RESOLVER);
 	}
 
-	/**
-	 * Private constructor with already parsed media type expressions.
-	 */
-	private ProducesRequestCondition(Collection<ProduceMediaTypeExpression> expressions,
-			RequestedContentTypeResolver resolver) {
-
-		this.expressions = new ArrayList<>(expressions);
-		Collections.sort(this.expressions);
-		this.contentTypeResolver = (resolver != null ? resolver : new RequestedContentTypeResolverBuilder().build());
-	}
-
-
-	private Set<ProduceMediaTypeExpression> parseExpressions(String[] produces, String[] headers) {
-		Set<ProduceMediaTypeExpression> result = new LinkedHashSet<>();
-		if (headers != null) {
+	private List<ProduceMediaTypeExpression> parseExpressions(@Nullable String[] produces, @Nullable String[] headers) {
+		Set<ProduceMediaTypeExpression> result = null;
+		if (!ObjectUtils.isEmpty(headers)) {
 			for (String header : headers) {
 				HeadersRequestCondition.HeaderExpression expr = new HeadersRequestCondition.HeaderExpression(header);
 				if ("Accept".equalsIgnoreCase(expr.name)) {
 					for (MediaType mediaType : MediaType.parseMediaTypes(expr.value)) {
+						result = (result != null ? result : new LinkedHashSet<>());
 						result.add(new ProduceMediaTypeExpression(mediaType, expr.isNegated));
 					}
 				}
 			}
 		}
-		if (produces != null) {
+		if (!ObjectUtils.isEmpty(produces)) {
 			for (String produce : produces) {
+				result = (result != null ? result : new LinkedHashSet<>());
 				result.add(new ProduceMediaTypeExpression(produce));
 			}
 		}
-		return result;
+		return (result != null ? new ArrayList<>(result) : Collections.emptyList());
 	}
+
+	/**
+	 * Private constructor for internal use to create matching conditions.
+	 * Note the expressions List is neither sorted, nor deep copied.
+	 */
+	private ProducesRequestCondition(List<ProduceMediaTypeExpression> expressions, ProducesRequestCondition other) {
+		this.expressions = expressions;
+		this.contentTypeResolver = other.contentTypeResolver;
+	}
+
 
 	/**
 	 * Return the contained "produces" expressions.
@@ -185,27 +196,52 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	@Nullable
 	public ProducesRequestCondition getMatchingCondition(ServerWebExchange exchange) {
 		if (CorsUtils.isPreFlightRequest(exchange.getRequest())) {
-			return PRE_FLIGHT_MATCH;
+			return EMPTY_CONDITION;
 		}
 		if (isEmpty()) {
 			return this;
 		}
-		Set<ProduceMediaTypeExpression> result = new LinkedHashSet<>(expressions);
-		result.removeIf(expression -> !expression.match(exchange));
-		return (result.isEmpty()) ? null : new ProducesRequestCondition(result, this.contentTypeResolver);
+		List<ProduceMediaTypeExpression> result = getMatchingExpressions(exchange);
+		if (!CollectionUtils.isEmpty(result)) {
+			return new ProducesRequestCondition(result, this);
+		}
+		else {
+			try {
+				if (MediaType.ALL.isPresentIn(getAcceptedMediaTypes(exchange))) {
+					return EMPTY_CONDITION;
+				}
+			}
+			catch (NotAcceptableStatusException | UnsupportedMediaTypeStatusException ex) {
+				// Ignore
+			}
+		}
+		return null;
+	}
+
+	@Nullable
+	private List<ProduceMediaTypeExpression> getMatchingExpressions(ServerWebExchange exchange) {
+		List<ProduceMediaTypeExpression> result = null;
+		for (ProduceMediaTypeExpression expression : this.expressions) {
+			if (expression.match(exchange)) {
+				result = result != null ? result : new ArrayList<>();
+				result.add(expression);
+			}
+		}
+		return result;
 	}
 
 	/**
 	 * Compares this and another "produces" condition as follows:
 	 * <ol>
 	 * <li>Sort 'Accept' header media types by quality value via
-	 * {@link MediaType#sortByQualityValue(List)} and iterate the list.
+	 * {@link org.springframework.util.MimeTypeUtils#sortBySpecificity(List)}
+	 * and iterate the list.
 	 * <li>Get the first index of matching media types in each "produces"
 	 * condition first matching with {@link MediaType#equals(Object)} and
 	 * then with {@link MediaType#includes(MediaType)}.
 	 * <li>If a lower index is found, the condition at that index wins.
 	 * <li>If both indexes are equal, the media types at the index are
-	 * compared further with {@link MediaType#SPECIFICITY_COMPARATOR}.
+	 * compared further with {@link MediaType#isMoreSpecific(MimeType)}.
 	 * </ol>
 	 * <p>It is assumed that both instances have been obtained via
 	 * {@link #getMatchingCondition(ServerWebExchange)} and each instance
@@ -214,6 +250,9 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 	 */
 	@Override
 	public int compareTo(ProducesRequestCondition other, ServerWebExchange exchange) {
+		if (this.expressions.isEmpty() && other.expressions.isEmpty()) {
+			return 0;
+		}
 		try {
 			List<MediaType> acceptedMediaTypes = getAcceptedMediaTypes(exchange);
 			for (MediaType acceptedMediaType : acceptedMediaTypes) {
@@ -238,11 +277,13 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 		}
 	}
 
-	private List<MediaType> getAcceptedMediaTypes(ServerWebExchange exchange)
-			throws NotAcceptableStatusException {
-
-		List<MediaType> mediaTypes = this.contentTypeResolver.resolveMediaTypes(exchange);
-		return mediaTypes.isEmpty() ? Collections.singletonList(MediaType.ALL) : mediaTypes;
+	private List<MediaType> getAcceptedMediaTypes(ServerWebExchange exchange) throws NotAcceptableStatusException {
+		List<MediaType> result = exchange.getAttribute(MEDIA_TYPES_ATTRIBUTE);
+		if (result == null) {
+			result = this.contentTypeResolver.resolveMediaTypes(exchange);
+			exchange.getAttributes().put(MEDIA_TYPES_ATTRIBUTE, result);
+		}
+		return result;
 	}
 
 	private int indexOfEqualMediaType(MediaType mediaType) {
@@ -276,17 +317,28 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 			ProduceMediaTypeExpression expr1 = condition1.getExpressionsToCompare().get(index1);
 			ProduceMediaTypeExpression expr2 = condition2.getExpressionsToCompare().get(index2);
 			result = expr1.compareTo(expr2);
-			result = (result != 0) ? result : expr1.getMediaType().compareTo(expr2.getMediaType());
+			result = (result != 0 ? result : expr1.getMediaType().compareTo(expr2.getMediaType()));
 		}
 		return result;
 	}
 
 	/**
 	 * Return the contained "produces" expressions or if that's empty, a list
-	 * with a {@code MediaType_ALL} expression.
+	 * with a {@value MediaType#ALL_VALUE} expression.
 	 */
 	private List<ProduceMediaTypeExpression> getExpressionsToCompare() {
-		return (this.expressions.isEmpty() ? mediaTypeAllList  : this.expressions);
+		return (this.expressions.isEmpty() ? this.mediaTypeAllList : this.expressions);
+	}
+
+
+	/**
+	 * Use this to clear {@link #MEDIA_TYPES_ATTRIBUTE} that contains the parsed,
+	 * requested media types.
+	 * @param exchange the current exchange
+	 * @since 5.2
+	 */
+	public static void clearMediaTypesAttribute(ServerWebExchange exchange) {
+		exchange.getAttributes().remove(MEDIA_TYPES_ATTRIBUTE);
 	}
 
 
@@ -307,7 +359,7 @@ public final class ProducesRequestCondition extends AbstractRequestCondition<Pro
 		protected boolean matchMediaType(ServerWebExchange exchange) throws NotAcceptableStatusException {
 			List<MediaType> acceptedMediaTypes = getAcceptedMediaTypes(exchange);
 			for (MediaType acceptedMediaType : acceptedMediaTypes) {
-				if (getMediaType().isCompatibleWith(acceptedMediaType)) {
+				if (getMediaType().isCompatibleWith(acceptedMediaType) && matchParameters(acceptedMediaType)) {
 					return true;
 				}
 			}
